(char *)0L is not the same as 0, at least on some systems (mine and a freebsd). Fixes crashes in the debugger.

BUG: 137483